services/kserve/model-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: model-ingress
  namespace: mlops
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /v2/models/$1/$2
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /models/([A-Za-z0-9-]+)/(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: wine-classifier-predictor      # ← now static
            port:
              number: 80
